test/expected/type_resolves_command_names.out
[CompoundList]
  [CompoundListCondition, None]
    [FunctionDefinition "g"]
      [BraceGroup]
        [CompoundList]
          [CompoundListCondition, None]
            [SimpleCommand ":"]
  [CompoundListCondition, None]
    [SimpleCommand "type" "echo"]
  [CompoundListCondition, None]
    [SimpleCommand "type" "g"]
  [CompoundListCondition, None]
    [SimpleCommand "type" "true"]
  [CompoundListCondition, None]
    [SimpleCommand "type" "nonexistent_xyz"]
[Word
  Unquoted "g"
]
[Word
  Unquoted "{"
]
[Word
  Unquoted ":"
]
[Word
  Unquoted "}"
]
[Word
  Unquoted "type"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "type"
]
[Word
  Unquoted "g"
]
[Word
  Unquoted "type"
]
[Word
  Unquoted "true"
]
[Word
  Unquoted "type"
]
[Word
  Unquoted "nonexistent_xyz"
]
echo is a shell builtin
g is a shell function
true is a shell builtin
shit: 6:1: error: Builtin `type`: The command 'nonexistent_xyz' was not found.
     6 |  type nonexistent_xyz
       |  ^~~~~~~~~~~~~~~~~~~~ here.
[Code 1]
